force-app/zurich-base/main/default/objects/ContactPointPhone/ContactPointPhone.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>