force-app/zurich-base/main/default/objects/ContactPointPhone/fields/PhoneType__c.field-meta.xml
<CustomField>
    <fullName>PhoneType__c</fullName>
    <description>(ZE/OCS) Identifica el tipo de comunicación de INFO.</description>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TL</fullName>
                <label>Home</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Fax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>